src/test/deca/syntax/valid/objet_asm_mult.deca

class A {
    void m() asm("
        lig1 
        ok
        lig2
    ");
}
{
    A a;
    a = new A();
    a.m();
}
