src/test/deca/syntax/invalid/asm_nostring.deca

class A {
    void m() asm(123);
}
{ 
    
}
